--- a/ovirt-node-plugin-foreman.spec.in
+++ b/ovirt-node-plugin-foreman.spec.in
@@ -194,19 +194,20 @@ echo "foreman-proxy ALL=NOPASSWD: /sbin/shutdown" >> %{_sysconfdir}/sudoers
 # Setup network (excluding iptables)
 %if 0%{?rhel} == 6
     chkconfig --add network-dynamic
-    chkconfig network-dynamic on
+    chkconfig network-dynamic off
     chkconfig network on
 
 %else
     #systemctl enable NetworkManager-wait-online.service
     systemctl disable NetworkManager
 
+    systemctl disable network-dynamic
     systemctl enable network
-    systemctl enable network-dynamic
 %endif
 
-# We cannot modify sysconfig/network flag because this file gets overwritten by livecd-creator later on
-sed -i 's/.*NETWORKING.*exit 6.*/#NETWORKING flag check turned off/' %{_sysconfdir}/init.d/network
+# XXX We cannot modify sysconfig/network flag because this file gets overwritten by ovirt-node,
+# also configure network dynamically instead.
+sed -i 's/.*NETWORKING.*exit 6.*/\/etc\/init.d\/network-dynamic start/' %{_sysconfdir}/init.d/network
 
 # When using ntpdate during start, do not pause when time servers not available (if service is enabled)
 [ -f %{_sysconfdir}/sysconfig/ntpdate ] && sed -i -e 's/^.*RETRIES.*$/RETRIES=0/g' %{_sysconfdir}/sysconfig/ntpdate
